--- a/index.css
+++ b/index.css
@@ -1,9 +1,9 @@
 body {
+  margin-top: 2vh;
   background-color: #ffa8a9;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-top: 5vh;
   font-family: "Quicksand", sans-serif;
 }
 
@@ -11,11 +11,13 @@ body {
   background-color: white;
   border-radius: 10px;
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.196);
-  width: 90vw;
-  height: 90vh;
+  width: 100vw;
+  height: 90%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-left: 2vw;
+  margin-right: 2vw;
 }
 
 .recipe-info h3 {
@@ -29,14 +31,21 @@ body {
   border-radius: 5px;
 }
 
-.steps {
+.outer-steps {
   width: 90%;
+  height: 100%;
+}
+
+.steps {
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   align-self: center;
   justify-content: center;
+  padding-bottom: 100px;
 }
 
 .step {
@@ -68,4 +77,23 @@ body {
 mark {
   background-color: #ffa8a9;
   border-radius: 5px;
+}
+
+.floating-buttons {
+  display: flex;
+  flex-direction: row;
+  position: fixed;
+  right: 0;
+  bottom: 0;
+}
+
+.floating-buttons button {
+  width: 60px;
+  height: 60px;
+  border-radius: 50px;
+  background-color: #f786aa;
+  color: white;
+  border: none;
+  box-shadow: 2px 2px 3px #0000004a;
+  margin: 10px;
 }
